compiler/tests/fixtures/invalid/semantics/duplicate_role_name.viv
// Invalid: Two roles with the same name in one action

action greet:
    roles:
        @person:
            as: initiator
        @person:
            as: recipient
